--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:balance_buddy]
-platform = atmelavr
-board = nanoatmega328
+platform = espressif32
+board = esp32doit-devkit-v1
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	greiman/SSD1306Ascii@^1.3.1
 	https://github.com/autowp/arduino-mcp2515.git
 	fastled/FastLED@^3.4.0
+	sandeepmistry/CAN@^0.3.1
